# kayfabe

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  install.sh
.github/workflows/: ci.yml  release.yml
agents/: ci_describe_pr.md  create_handoff.md  create_plan.md  create_plan_generic.md  create_plan_nt.md  create_worktree.md  describe_pr.md  founder_mode.md  iterate_plan.md  iterate_plan_nt.md  local_review.md  research_codebase.md  research_codebase_nt.md  resume_handoff.md  thoughts-locator.md
src/: error.rs  lib.rs  main.rs
src/agents/: claude.rs  cursor.rs  detector.rs  installer.rs  mod.rs  templates.rs  windsurf.rs
src/cli/: completions.rs  config.rs  init.rs  install.rs  mod.rs  root.rs  status.rs  template.rs  worktree.rs
src/config/: global.rs  mod.rs  project.rs  schema.rs
src/git/: mod.rs  repo.rs  root.rs  worktree.rs
src/ide/: launcher.rs  mod.rs
src/templates/: manager.rs  mod.rs
src/ui/: mod.rs  output.rs  progress.rs
thoughts/shared/plans/: 2025-01-04-kayfabe-global-agents-restructure.md
