[package]
name = "kayfabe"
version = "0.1.0"
edition = "2021"
authors = ["Kayfabe Contributors"]
description = "AI-assisted development CLI for worktree management and agent configuration"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ShreyeshArangath/kayfabe"
keywords = ["git", "worktree", "ai", "cli", "development"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
git2 = "0.19"
anyhow = "1"
thiserror = "2"
console = "0.15"
indicatif = "0.17"
dialoguer = "0.11"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
tera = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
remote = ["tokio", "reqwest"]

[dependencies.tokio]
version = "1"
features = ["rt-multi-thread", "macros"]
optional = true

[dependencies.reqwest]
version = "0.12"
optional = true

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "kayfabe"
path = "src/main.rs"
